--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* main {
+main {
   pad: 3em 0;
   background: #e5e5e5;
   width: 1440px;
@@ -57,4 +57,4 @@ footer {
   background-color: #cccccc;
   text-align: center;
   padding: 40px;
-} */
+}
