--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ main {
   display: inline-block;
   margin: 50px 20px 50px auto;
   width: 600px;
+  height: 602px;
   vertical-align: top;
-  height: 600px;
   position: relative;
 }
 
@@ -88,16 +88,27 @@ main {
 .text-container {
   width: 340px;
   min-height: 400px;
-  margin: 10% auto 0;
-  padding: 10px 10px 100px;
-  text-align: initial;
+  margin: 6% auto 0;
+  /* padding: 10px 10px 100px; */
+  /* padding-bottom: 100px; */
 }
 
-.text-container p {
+.text-container textarea {
+  background: none;
   color: #ffffff;
-  display: inline;
-  font-size: 20px;
-  word-wrap: break-word;
+  width: 340px;
+  min-height: 500px;
+  /* padding: 10px; */
+  /* margin: 10% auto; */
+  resize: none;
+  border: 1px solid;
+  border: none;
+  font-size: 18px;
+}
+
+.text-container textarea:focus {
+  outline: none;
+  border: none;
 }
 
 .button-container .button {
